Bug 1691160. Make MaybeCreateDisplayPortInFirstScrollFrameEncountered consider a zero margin display a not having a display port so it sets one. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D104359